# armactl

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  armactl  pyproject.toml  План розробки armactl.md  Чекліст розробки armactl.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml  static.yml
assets/: README.md
docs/: architecture.md  audit-fix-plan.md  checklist.md  development.md  localization.md  migration.md  release-notes-template.md  release-process.md  roadmap.md  telegram-bot.md  troubleshooting.md
scripts/: bootstrap-dev.sh  bootstrap.sh  migrate-admins-sidecar  migrate-disabled-mods-sidecar  run-host-tests  run-tui
src/armactl/: __init__.py  __main__.py  a2s.py  addon_cleanup.py  admins_manager.py  bot_config.py  bot_manager.py  cleaner.py  cli.py  config_manager.py  discovery.py  i18n.py  installer.py  integrity.py  logs.py  metrics.py  mods.py  mods_manager.py  mods_state.py  paths.py  player_view.py  ports.py  rcon.py  redaction.py  repair.py  report.py  service_manager.py  state.py  status_summary.py  telegram_bot.py  timer_manager.py  utils.py
src/armactl/locales/: en.json  uk.json
src/armactl/tui/: __init__.py  app.py  dashboard.py  display.py  screens.py
templates/: armactl-bot.service.j2  armactl-systemctl-helper.py.j2  armactl-systemctl-helper.sh.j2  armactl-systemctl-helper.sudoers.j2  armareforger-restart.service.j2  armareforger-restart.timer.j2  armareforger.service.j2  config.json  config.json.j2  start-armareforger.sh.j2
tests/: test_a2s.py  test_addon_cleanup.py  test_admins_manager.py  test_admins_sidecar_validation.py  test_bot_config.py  test_bot_manager.py  test_cleaner.py  test_config_manager.py  test_config_validation_sidecar.py  test_disabled_mods_workflow.py  test_discovery.py  test_gitignore.py  test_i18n.py  test_installer.py  test_integrity.py  test_metrics.py  test_mods.py  test_paths.py  test_player_view.py  test_rcon.py  test_redaction.py  test_repair.py  test_report.py  test_service_integration.py  test_service_manager.py  test_state.py  test_status_summary.py  test_telegram_bot.py  test_tui_app.py  test_tui_dashboard.py  test_tui_display.py  test_tui_mod_manager.py  test_tui_mouse_copy.py
website/: index.html
