[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "armactl"
version = "0.1.1"
description = "Installer, manager and TUI for Arma Reforger Dedicated Server on Linux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "dturovskiy" },
]
keywords = ["arma-reforger", "dedicated-server", "linux", "tui", "server-manager"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "click>=8.1",
    "textual>=0.80",
    "jinja2>=3.1",
    "rich>=13.0",
    "python-telegram-bot>=22.7,<23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
armactl = "armactl.cli:main"

[project.urls]
Homepage = "https://github.com/dturovskiy/armactl"
Repository = "https://github.com/dturovskiy/armactl"
Issues = "https://github.com/dturovskiy/armactl/issues"
Documentation = "https://github.com/dturovskiy/armactl/tree/main/docs"
Changelog = "https://github.com/dturovskiy/armactl/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/armactl"]

[tool.hatch.build.targets.sdist]
include = [
    "src/armactl/**/*.py",
    "src/armactl/**/*.json",
    "templates/**/*.j2",
    "README.md"
]

[tool.hatch.build]
include = [
    "src/armactl/**/*.py",
    "src/armactl/**/*.json",
    "templates/**/*.j2"
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
